--- a/5_MLP_Class.ipynb
+++ b/5_MLP_Class.ipynb
@@ -243,10 +243,8 @@
         "    val_loss /= len(val_loader.dataset)\n",
         "    val_acc = 100 * (correct / total)\n",
         "    val_loss_list.append(val_loss)\n",
-        "    #EarlyStopping\n",
-        "    val_score=val_loss\n",
         "    # Her epok sonunda istatistikleri yazdırın\n",
-        "    print(f'Epoch: {epoch+1}/{num_epochs} - Train Loss: {train_loss:.4f} - Train Acc: {train_acc:.2f}% - Val Loss: {val_loss:.4f} - Val Acc: {val_acc:.2f}%')\n"
+        "    print(f'Epoch: {epoch+1}/{num_epochs} - Train Loss: {train_loss:.4f} - Train Acc: {train_acc:.2f}% - Val Loss: {val_loss:.4f} - Val Acc: {val_acc:.2f}%')"
       ],
       "metadata": {
         "colab": {
