--- a/6_Soru_regülüzasyon.ipynb
+++ b/6_Soru_regülüzasyon.ipynb
@@ -169,7 +169,7 @@
         "optimizer = torch.optim.SGD(model.parameters(), lr=0.01)\n",
         "# Epoch sayısı ve learning rate değerlerini belirlenir\n",
         "num_epochs = 50\n",
-        "# Batch size seçilir\n"
+        "# Batch size seçilir"
       ],
       "metadata": {
         "id": "uQO0JBzH1uCH"
@@ -204,7 +204,6 @@
         "        l1_reg = torch.tensor(0.)\n",
         "        for param in model.parameters():\n",
         "            l1_reg += torch.norm(param, p=1)\n",
-        "\n",
         "        loss += l1_lambda * l1_reg\n",
         "        # Kaybı geriye doğru hesaplayın ve gradiyanları hesaplayın\n",
         "        loss.backward()\n",
@@ -217,12 +216,9 @@
         "    train_loss /= len(train_loader.dataset)\n",
         "    train_loss_list.append(train_loss)\n",
         "    train_acc = 100 * correct / total\n",
-        "    \n",
         "    # Değerlendirme modu\n",
         "    model.eval()\n",
         "    val_loss = 0.0\n",
-        "    \n",
-        "    \n",
         "    with torch.no_grad():\n",
         "        correct = 0\n",
         "        total = 0\n",
@@ -238,7 +234,6 @@
         "            l1_reg = torch.tensor(0.)\n",
         "            for param in model.parameters():\n",
         "              l1_reg += torch.norm(param, p=1)\n",
-        "\n",
         "            loss += l1_lambda * l1_reg\n",
         "            # İstatistikleri takip edin\n",
         "            val_loss += loss.item() * data.size(0)\n",
