--- a/6_Soru.ipynb
+++ b/6_Soru.ipynb
@@ -16,7 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 109,
       "metadata": {
         "id": "3LCpc2V71mVZ"
       },
@@ -41,9 +41,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "F0ewFGrk1uNy",
-        "outputId": "db054054-e152-40e7-ab0c-14cd8f52faef"
+        "outputId": "a8b33e82-a176-4634-f191-ff166a6478fe"
       },
-      "execution_count": 50,
+      "execution_count": 110,
       "outputs": [
         {
           "output_type": "stream",
@@ -67,15 +67,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "u7asaX2j1uL6",
-        "outputId": "2b014f2d-25d8-4f32-e165-9cc701c5f0be"
+        "outputId": "b92b8db3-b186-471d-fcaf-8fc4c982507c"
       },
-      "execution_count": 51,
+      "execution_count": 111,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2023-04-09 22:28:24.584779\n"
+            "2023-04-09 22:48:42.413930\n"
           ]
         }
       ]
@@ -108,7 +108,7 @@
       "metadata": {
         "id": "H4hbjA3G1uJd"
       },
-      "execution_count": 52,
+      "execution_count": 112,
       "outputs": []
     },
     {
@@ -137,7 +137,7 @@
       "metadata": {
         "id": "iB_lDBco1uG9"
       },
-      "execution_count": 53,
+      "execution_count": 113,
       "outputs": []
     },
     {
@@ -155,7 +155,7 @@
       "metadata": {
         "id": "px1cmHDm1uEo"
       },
-      "execution_count": 54,
+      "execution_count": 114,
       "outputs": []
     },
     {
@@ -174,7 +174,34 @@
       "metadata": {
         "id": "uQO0JBzH1uCH"
       },
-      "execution_count": 55,
+      "execution_count": 115,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def early_stopping(model, val_score, best_val_loss, patience,patience_counter):\n",
+        "    stop_training = False\n",
+        "    if best_val_loss is None:\n",
+        "        patience_counter = 0\n",
+        "        best_val_loss = val_score\n",
+        "        torch.save(model.state_dict(), \"checkpoint.pt\")\n",
+        "    elif best_val_loss < val_score:\n",
+        "        patience_counter += 1\n",
+        "        print(\"Earlystopping Patience Counter\", patience_counter)\n",
+        "        if patience_counter == patience:\n",
+        "             stop_training = True\n",
+        "    else:\n",
+        "        best_val_loss = val_score\n",
+        "        torch.save(model.state_dict(), \"checkpoint.pt\")\n",
+        "        patience_counter = 0\n",
+        "\n",
+        "    return best_val_loss, patience_counter, stop_training\n"
+      ],
+      "metadata": {
+        "id": "uVJNoCqPKcnB"
+      },
+      "execution_count": 116,
       "outputs": []
     },
     {
@@ -184,6 +211,8 @@
         "best_val_loss=None\n",
         "patience=5\n",
         "val_loss_list=[]\n",
+        "patience_counter = 0\n",
+        "#stop_training = False\n",
         "for epoch in range(num_epochs):\n",
         "    model.train()\n",
         "    train_loss = 0.0\n",
@@ -235,19 +264,9 @@
         "    val_loss_list.append(val_loss)\n",
         "    #EarlyStopping\n",
         "    val_score=val_loss\n",
-        "    if best_val_loss is None:\n",
-        "      patience_counter=0\n",
-        "      best_val_loss=val_score #hafızada patience boyu tutmaya başladık\n",
-        "      torch.save(model.state_dict(),\"/checkpoint.pt\")\n",
-        "    elif best_val_loss<val_score:  # patience counter\n",
-        "      patience_counter+=1\n",
-        "      print(\"Earlystopping Patience Counter\",patience_counter)\n",
-        "      if patience_counter==patience:           \n",
-        "        break\n",
-        "    else:\n",
-        "      best_val_loss=val_score\n",
-        "      torch.save(model.state_dict(),\"checkpoint.pt\")        # en iyi modeli tutuyor\n",
-        "      patience_counter=0        # en iyi modeli aldıktan sonra patience sıfırlıyoruz\n",
+        "    best_val_loss, patience_counter, stop_training=early_stopping(model,val_score,best_val_loss,patience,patience_counter)\n",
+        "    if stop_training==True:\n",
+        "      break\n",
         "    print(f'Epoch: {epoch+1}/{num_epochs} - Train Loss: {train_loss:.4f} - Train Acc: {train_acc:.2f}% - Val Loss: {val_loss:.4f} - Val Acc: {val_acc:.2f}%')"
       ],
       "metadata": {
@@ -255,9 +274,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kLaVcwNZ1t_t",
-        "outputId": "37274d5d-ffb0-43f2-e9a5-ce76df312e59"
+        "outputId": "303ab434-908e-4ba1-91de-4c546c2fc3a1"
       },
-      "execution_count": 56,
+      "execution_count": 117,
       "outputs": [
         {
           "output_type": "stream",
@@ -354,9 +373,9 @@
           "height": 472
         },
         "id": "Fyxp4UJ31t9N",
-        "outputId": "cc3bde0f-71f4-4d3d-8f49-78b2f0d72aa8"
+        "outputId": "2b384b0c-4931-49f0-c0d3-53d8c857cabb"
       },
-      "execution_count": 57,
+      "execution_count": 118,
       "outputs": [
         {
           "output_type": "display_data",
@@ -385,7 +404,7 @@
       "metadata": {
         "id": "f-1rNQTA2eR8"
       },
-      "execution_count": 58,
+      "execution_count": 119,
       "outputs": []
     },
     {
@@ -398,9 +417,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZC4lusas2lel",
-        "outputId": "8576c75e-4ebd-4ce4-bc4c-a9d80e580ad8"
+        "outputId": "b7c8a07d-1aba-43a9-f484-fc4e0e4e6f72"
       },
-      "execution_count": 59,
+      "execution_count": 120,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -410,7 +429,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 59
+          "execution_count": 120
         }
       ]
     },
@@ -452,9 +471,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SO7rM1Tz1t49",
-        "outputId": "82f46249-7796-4f95-864e-ff13e2fb2057"
+        "outputId": "6bb89f10-0487-4306-f0e6-93ebb263ff2b"
       },
-      "execution_count": 60,
+      "execution_count": 121,
       "outputs": [
         {
           "output_type": "stream",
@@ -475,7 +494,7 @@
       "metadata": {
         "id": "YdPgENn81t2m"
       },
-      "execution_count": 60,
+      "execution_count": 121,
       "outputs": []
     }
   ]
